--- a/text_to_segy.ipynb
+++ b/text_to_segy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +11,34 @@
     "from obspy.io.segy.segy import SEGYTraceHeader, SEGYBinaryFileHeader\n",
     "from obspy.io.segy.core import _read_segy\n",
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_fpath = \"C:\\\\Users\\\\Fernando\\\\Downloads\\\\Data_GPR\\\\gpr\\\\02_09_2023_10_49_32.segy\"\n",
+    "input_fpath = \"C:\\\\Users\\\\Nur Jamiludin\\\\Documents\\\\GitHub\\\\ground_penetrating_radar_app\\\\data_gpr\\\\02_09_2023_10_49_32.segy\"\n",
     "dt = 1 * 10**-9 # second"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_read = np.genfromtxt(input_fpath, dtype=np.float)\n",
+    "text_read = np.genfromtxt(input_fpath, dtype=np.float64)\n",
     "total_channel = text_read.shape[1]\n",
     "total_data = text_read.shape[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stream.write(\"dadi.sgy\", format=\"SEGY\", data_encoding=5)"
+    "name_file_now = datetime.now().strftime(\"%d_%m_%Y_%H_%M_%S.segy\")\n",
+    "stream.write(name_file_now, format=\"SEGY\", data_encoding=1)"
    ]
   }
  ],
@@ -85,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
